[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/UI/status/border_bar.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/status/red_bar.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/status/portrait.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/status/green_bar.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/fonts/hpFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://scripts/UI.gd" type="Script" id=6]
[ext_resource path="res://assets/UI/fonts/xpFont.tres" type="DynamicFont" id=7]

[node name="UI" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -542.392
margin_right = 960.0
margin_bottom = 537.608
mouse_filter = 2
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Control" parent="."]
margin_left = 220.0
margin_top = 75.0
margin_right = 631.0
margin_bottom = 161.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Sprite" parent="Status"]
position = Vector2( 7.03384, 9.8815 )
scale = Vector2( 0.77087, 0.791553 )
texture = ExtResource( 2 )
centered = false

[node name="XP" type="Sprite" parent="Status"]
position = Vector2( 5.82571, 52.9776 )
scale = Vector2( 0.648019, 0.748315 )
texture = ExtResource( 4 )
centered = false

[node name="Borders" type="Sprite" parent="Status"]
position = Vector2( 204, 43 )
texture = ExtResource( 1 )

[node name="Portrait" type="Sprite" parent="Status"]
position = Vector2( -85, 42 )
texture = ExtResource( 3 )

[node name="HP" type="Label" parent="Status/Portrait"]
margin_left = 97.0
margin_top = -27.0
margin_right = 168.0
margin_bottom = -5.0
custom_fonts/font = ExtResource( 5 )
text = "HP 40 / 40"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="XP" type="Label" parent="Status/Portrait"]
margin_left = 97.0
margin_top = 15.0
margin_right = 168.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 7 )
text = "XP 30%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLog" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -260.0
margin_right = 530.0
margin_bottom = -110.0

[node name="PanelLog" type="Panel" parent="MessageLog"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainerLog" type="ScrollContainer" parent="MessageLog/PanelLog"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLogList" type="VBoxContainer" parent="MessageLog/PanelLog/ScrollContainerLog"]
